RESOLVED FIXED127814
REGRESSION (r162947): Repaint test results are different between WK1 and WK2
https://bugs.webkit.org/show_bug.cgi?id=127814
Summary REGRESSION (r162947): Repaint test results are different between WK1 and WK2
Alexey Proskuryakov
Reported 2014-01-28 16:00:01 PST
After <http://trac.webkit.org/changeset/162947>, there were multiple repaint tests failing on WebKit1. Antti updated the results, but now the tests are failing on WebKit2 bots.
Attachments
patch (23.30 KB, patch)
2014-01-29 05:44 PST, Antti Koivisto
andersca: review+
Alexey Proskuryakov
Comment 1 2014-01-28 16:04:07 PST
Marked all these tests as failing on WK2 in <http://trac.webkit.org/r162978>. Antti, could you please look into this soon? I'm not even sure if the results are stable now, or if the tests are no longer meaningful after these changes.
Antti Koivisto
Comment 2 2014-01-29 05:44:13 PST
Antti Koivisto
Comment 3 2014-01-29 08:22:28 PST
Note You need to log in before you can comment on or make changes to this bug.